Used REST for pokemon API endpoints and added a sample test file as well for a component

--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint -c .eslintrc.js --ext .js,.ts,.vue src/",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "test": "vitest --dom"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue3-toastify": "^0.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/test-utils": "^2.4.3",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.48.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -25,9 +29,13 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-prettier-vue": "^5.0.0",
     "eslint-plugin-vue": "^9.17.0",
+    "happy-dom": "^12.10.3",
+    "jsdom": "^23.2.0",
+    "msw": "^2.0.13",
     "postcss": "^8.4.28",
     "prettier": "^3.0.2",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vitest": "^1.1.3"
   }
 }
